# Space-Invaders

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: static-analysis.yml
src/: Animation.cpp  Bullet.cpp  Enemy.cpp  Main.cpp  ResourceManager.cpp  SpaceInvaders.cpp  Spaceship.cpp
src/headers/: Animation.h  Bullet.h  Colors.h  Enemy.h  ResourceManager.h  Sound.h  SpaceInvaders.h  Spaceship.h  State.h  StateMachine.h  Textures.h
